removed vestiges of angular, bower, etc. added some basic help info

--- a/index.html
+++ b/index.html
@@ -65,14 +65,23 @@
 	</div>
 
 	<div class="leftPanel">
-		hi
+		<ul>
+			<li>W - forward</li>
+			<li>A - left</li>
+			<li>S - backward</li>
+			<li>D - right</li>
+			<li>Space - up</li>
+			<li>C - down</li>
+		</ul>
+
+		<p>Left click on a grid tile to rotate around that tile.</p>
+		<p>Left click on a token to enter token mode.</p>
+		<p>In token mode, the arrow keys move the token.</p>
+		<p>Press ESC to unselect token.</p>
+		<p>Right click and drag to move camera.</p>
 	</div>
 
 
-
-	<script src="bower_components/angular/angular.min.js"></script>
-	<script src="js/ng/app.js"></script>
-	<script src="js/ng/controllers.js"></script>
 
 </body>
 </html>
