--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	
+
 	<title>Mat3d</title>
-	
+
 	<link rel="stylesheet" href="css/main.css" />
-	
+
 	<script src="js/utils.js"></script>
-	
+
 	<script src="js/3d/3d.js"></script>
 	<script src="js/3d/init.js"></script>
 	<script src="js/3d/setupControls.js"></script>
 	<script src="js/3d/render.js"></script>
-	
+
 	<script src="js/3d/three.js"></script>
 	<script src="js/3d/stats.js"></script>
 	<script src="js/3d/FirstPersonControls.js"></script>
-	
+
 </head>
 <body ng-controller="mainCtrl">
 
@@ -27,7 +27,7 @@
 	<div id="compass">
 		<div id="compassNeedle"> </div>
 	</div>
-	
+
 	<div id="dashboard" style="">
 		<table>
 		<tr>
@@ -41,9 +41,9 @@
 			<td id="rx"></td>
 		</tr>
 		<tr>
-			
+
 			<th>my</th>
-			<td id="my"></td>				
+			<td id="my"></td>
 			<th>mry</th>
 			<td id="mry"></td>
 			<th>y</th>
@@ -79,9 +79,34 @@
 		<p>In token mode, the arrow keys move the token.</p>
 		<p>Press ESC to unselect token.</p>
 		<p>Right click and drag to move camera.</p>
+
+		<p>
+			<button id="add-token">add a token</button>
+		</p>
 	</div>
 
+	<script>
+		document.querySelector('#add-token').addEventListener('click', addToken);
 
+		window.globals = {
+
+
+		}
+
+		function addToken() {
+			const x = Math.floor(Math.random()*20) - 10;
+			const y = Math.floor(Math.random()*20) - 10;
+			const z = 0;
+			const r = Math.floor(Math.random()*256);
+			const g = Math.floor(Math.random()*256);
+			const b = Math.floor(Math.random()*256);
+			const color = (r << 16) + (g << 8) + b;
+			const randId = Math.floor(Math.random()*100000);
+			const name = `new-token-${randId}`;
+			const args = { name, color, x, y, z };
+			window.globals.renderToken(args);
+		}
+	</script>
 
 </body>
 </html>
