--- a/index.html
+++ b/index.html
@@ -82,11 +82,18 @@
 
 		<p>
 			<button id="add-token">add a token</button>
+			<button id="start-server">start server</button>
+			<button id="connect-to-server">connect to server</button>
 		</p>
 	</div>
 
+	<script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+	<script src="/js/multi/multi.js"></script>
+
 	<script>
 		document.querySelector('#add-token').addEventListener('click', addToken);
+		document.querySelector('#start-server').addEventListener('click', startServer);
+		document.querySelector('#connect-to-server').addEventListener('click', connectToServer);
 
 		window.globals = {
 
@@ -105,6 +112,12 @@
 			const name = `new-token-${randId}`;
 			const args = { name, color, x, y, z };
 			window.globals.renderToken(args);
+		}
+		function startServer() {
+			multi.serve();
+		}
+		function connectToServer() {
+			multi.client();
 		}
 	</script>
 
