--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	
+
 	<title>Mat3d</title>
-	
+
 	<link rel="stylesheet" href="css/main.css" />
-	
+
 	<script src="js/utils.js"></script>
-	
+
 	<script src="js/3d/3d.js"></script>
 	<script src="js/3d/init.js"></script>
 	<script src="js/3d/setupControls.js"></script>
 	<script src="js/3d/render.js"></script>
-	
+
 	<script src="js/3d/three.js"></script>
 	<script src="js/3d/stats.js"></script>
 	<script src="js/3d/FirstPersonControls.js"></script>
-	
+
 </head>
 <body ng-controller="mainCtrl">
 
@@ -27,7 +27,7 @@
 	<div id="compass">
 		<div id="compassNeedle"> </div>
 	</div>
-	
+
 	<div id="dashboard" style="">
 		<table>
 		<tr>
@@ -41,9 +41,9 @@
 			<td id="rx"></td>
 		</tr>
 		<tr>
-			
+
 			<th>my</th>
-			<td id="my"></td>				
+			<td id="my"></td>
 			<th>mry</th>
 			<td id="mry"></td>
 			<th>y</th>
@@ -81,6 +81,10 @@
 		<p>Right click and drag to move camera.</p>
 	</div>
 
+
+	<script src="js/lib/geckos.io.client.min.js"></script>
+
+	<script src="js/multi/multi.js"></script>
 
 
 </body>
